# ray-tracing

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  camera.cpp  camera.h  color.h  common.h  dielectric.cpp  dielectric.h  hittable.h  hittable_list.cpp  hittable_list.h  lambertian.cpp  lambertian.h  main.cpp  material.h  metal.cpp  metal.h  ray.cpp  ray.h  sphere.cpp  sphere.h  vec3.h
test/: CMakeLists.txt
